set(SRC
    abs.cpp
    abs.hpp
    biquad.cpp
    biquad.hpp
    blitosc.cpp
    blitosc.hpp
    camelenvelope.cpp
    camelenvelope.hpp
    chamberlin.cpp
    chamberlin.hpp
    clamp.cpp
    clamp.hpp
    clampinv.cpp
    clampinv.hpp
    conversion.cpp
    conversion.hpp
    crossfade.cpp
    crossfade.hpp
    div.cpp
    div.hpp
    delay.cpp
    delay.hpp
    foldback.cpp
    foldback.hpp
    rlc.cpp
    rlc.hpp
    moduleregister.hpp
    mul.cpp
    mul.hpp
    noise.cpp
    noise.hpp
    phase.cpp
    phase.hpp
    quantize.cpp
    quantize.hpp
    saturatoratan.cpp
    saturatoratan.hpp
    scaleshift.cpp
    scaleshift.hpp
    sine.cpp
    sine.hpp
    sympow.cpp
    sympow.hpp
    samphold.cpp
    samphold.hpp
    tanh.cpp
    tanh.hpp
    inlines.hpp
)

add_library(modules_obj OBJECT ${SRC})
set_target_properties(modules_obj PROPERTIES COMPILE_FLAGS "-fPIC")
set_target_properties(modules_obj PROPERTIES FOLDER core)
